<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:enabled="true"
        android:title="@string/home"/>
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/statistics"
        android:enabled="true"
        android:title="@string/statistics"/>
    <item
        android:id="@+id/spendingFragment"
        android:enabled="false"
        android:title=""/>
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/wallet"
        android:enabled="true"
        android:title="@string/wallet"/>
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/notification"
        android:enabled="true"
        android:title="@string/notification"/>

</menu>