<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/get_started"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_started_on"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@+id/imageStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textBudgetio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/budgetio"
        android:textSize="45sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@+id/textGetStarted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textGetStartedDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/get_started_desc"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@+id/textBudgetio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/textBudgetio"
        app:layout_constraintStart_toStartOf="@id/textBudgetio"
        app:layout_constraintTop_toBottomOf="@id/textGetStartedDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>
